# tendril

./: .gitignore  CONFIGURATION.md  LICENSE  Makefile.am  README.md  configure  configure.ac
include/: config.h  tendril.h
include/tendril/: configuration.h  metrics.h  queue.h  system.h  utilities.h
include/tendril/client/connection/: information.h
include/tendril/client/connection/handler/: metrics.h
include/tendril/configuration/: handler.h
include/tendril/http/: headers.h  parser.h  request.h  response.h
include/tendril/metrics/: counter.h
include/tendril/network/: listener.h  server.h
include/tendril/network/address/: set.h
include/tendril/network/listener/: information.h
include/tendril/queue/: kafka.h  manager.h
include/tendril/system/: information.h
include/tendril/system/process/: information.h
src/: Makefile.am  main.cpp  system_information.cpp  tendril.cpp  tendril_client_connection_handler_metrics.cpp  tendril_configuration.cpp  tendril_configuration_handler.cpp  tendril_http.cpp  tendril_http_parser.cpp  tendril_metrics.cpp  tendril_metrics_server.cpp  tendril_network_address_set.cpp  tendril_network_listener.cpp  tendril_network_server.cpp  tendril_queue_kafka.cpp  tendril_queue_manager.cpp  tendril_utilities.cpp
